# teste_wsl

./: pyproject.toml
data/: product.csv
proj_pyspark/: main.py
