[project]
name = "proj-pyspark"
version = "0.1.0"
description = ""
authors = [
    {name = "AnalistaOficial",email = "analista.oficial@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
